promo area styles, create new @@includes, consolidate button-styles blocks

--- a/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
@@ -20,6 +20,12 @@ transition: opacity 250ms ease-in-out;
 .custombtn {
   margin-bottom: 15px;
   width: 100%;
+  background: #e5e5e5;
+  color: #00447c uppercase;
+  font-family: 'Gotham A', 'Gotham B', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.0rem;
 }
 
 .contact-info button {
