--- a/development/terminalfour/src/sass/inner-style.scss
+++ b/development/terminalfour/src/sass/inner-style.scss
@@ -56,5 +56,6 @@ header {
 @import "ContentTypes/card";
 @import "ContentTypes/user-profile";
 @import "ContentTypes/button-styles";
+@import "ContentTypes/well";
 /** print styles **/
 @import "print";
