--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -7850,6 +7850,27 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
     padding-top: 0.3em;
   }
 
+  .apply-mobile {
+    font-size: 1.2em;
+    background: #d11242;
+    transition: background .25s ease !important;
+  }
+
+  .apply-mobile:hover {
+    background: #a60029;
+    color: #fff;
+  }
+
+  .visit-give-mobile {
+    background: gray;
+    transition: background .25s ease !important;
+  }
+
+  .visit-give-mobile:hover {
+    background: #424448;
+    color: #fff;
+  }
+
   button.btn.btn-default.visit-give-mobile, button.btn.btn-default.give-mobile, button.btn.btn-default.apply-mobile {
     width: 9%;
     position: relative;
@@ -7865,15 +7886,18 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
   }
 
   button.btn.btn-default.visit-give-mobile {
-    right: 3em;
+    right: 8.9em;
+    padding: 0.3em 0.1em !important;
   }
 
   button.btn.btn-default.give-mobile {
-    right: -9em;
+    right: 0em;
+    padding: 0.3em 0.1em !important;
   }
 
   button.btn.btn-default.apply-mobile {
-    right: -21em;
+    right: -8.95em;
+    padding: 0.3em 0.1em !important;
   }
 }
 @media (min-width: 1200px) {
@@ -7935,8 +7959,16 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
     width: 12em;
   }
 
-  .apply-button {
-    font-size: 1.2em;
+  button.btn.btn-default.visit-give-mobile {
+    right: 19.65%;
+  }
+
+  button.btn.btn-default.give-mobile {
+    right: 1%;
+  }
+
+  button.btn.btn-default.apply-mobile {
+    right: -17.76%;
   }
 }
 .msudenver_logo_change {
