--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -1,128 +1,108 @@
-  <!-- Global Header -->
+<!-- Global Header -->
 <header>
- <div class="navbar-fixed-top ">
-<div class="header-container" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png); background-size: 100%;" alt="Asphalt Image">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle quick links navigation</span>
-          <span class="fa fa-bars"></span>
-        </button>
-            <div class="row">
-              <div class="col-xs-8">
-                <a href="/"> <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage"> </a>
-              </div>
-              <!-- <a href="/admissions"><div class="col-xs-1 apply-button">APPLY</div></a>
-              <a href="/giving"><div class="col-xs-1 apply-button give-visit-buttons">GIVE</div></a>
-              <a href="/visit"><div class="col-xs-1 apply-button give-visit-buttons">VISIT</div></a>
-              <span class="fa fa-search fa-search-mobile"></span>
-              <div class="col-xs-12 faculty-staff-students">
-                <a href="/studenthub">Current Students</a><a class="faculty-staff-students">|</a>
-                <a href="/facstaff">Faculty &amp; Staff</a>
-              </div> -->
+   <div class="navbar-fixed-top ">
+      <div class="header-container" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png); background-size: 100%;" alt="Asphalt Image">
+         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+         <span class="sr-only">Toggle quick links navigation</span>
+         <span class="fa fa-bars"></span>
+         </button>
+         <div class="row">
+            <div class="col-xs-8">
+               <a href="/"> <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage"> </a>
             </div>
-
-       </div>
-
-
-
-    <nav class="navbar nav-header">
-
-    <!-- Brand and toggle get grouped for better mobile display -->
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-      <ul class="nav navbar-nav">
-        <a href="/visit"><button type="button" class="btn btn-default visit-give-mobile">Visit</button></a>
-        <a href="/giving"><button type="button" class="btn btn-default visit-give-mobile give-mobile">Give</button></a>
-        <a href="/admissions"><button type="button" class="btn btn-default apply-mobile">Apply</button></a>
-        <ul class="fac-staf-stu-mobile">
-            <li><a href="/studenthub">Current Students</a></li>
-            <li><a href="/facstaff">Faculty &amp; Staff</a></li>
-        </ul>
-
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Prospective Students <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-          <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends</a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-          <li>
-          <a href="#"  role="button">Athletics </a>
-
-        </li>
-
-          <button type="button" class="btn rowdyblue" data-toggle="modal" data-target="#myModal">
-  Search
-</button>
-
-
-
-
-      </ul>
-    </div><!-- /.navbar-collapse -->
-</nav>
-
-
-     </div>
+            <!-- <a href="/admissions"><div class="col-xs-1 apply-button">APPLY</div></a>
+               <a href="/giving"><div class="col-xs-1 apply-button give-visit-buttons">GIVE</div></a>
+               <a href="/visit"><div class="col-xs-1 apply-button give-visit-buttons">VISIT</div></a>
+               <span class="fa fa-search fa-search-mobile"></span>
+               <div class="col-xs-12 faculty-staff-students">
+                 <a href="/studenthub">Current Students</a><a class="faculty-staff-students">|</a>
+                 <a href="/facstaff">Faculty &amp; Staff</a>
+               </div> -->
+         </div>
+      </div>
+      <nav class="navbar nav-header">
+         <!-- Brand and toggle get grouped for better mobile display -->
+         <!-- Collect the nav links, forms, and other content for toggling -->
+         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+               <a href="/visit"><button type="button" class="btn btn-default visit-give-mobile">Visit</button></a>
+               <a href="/giving"><button type="button" class="btn btn-default visit-give-mobile give-mobile">Give</button></a>
+               <a href="/admissions"><button type="button" class="btn btn-default apply-mobile">Apply</button></a>
+               <ul class="fac-staf-stu-mobile">
+                  <li><a href="/studenthub">Current Students</a></li>
+                  <li><a href="/facstaff">Faculty &amp; Staff</a></li>
+               </ul>
+               <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                     <li><a href="#">Action</a></li>
+                     <li><a href="#">Another action</a></li>
+                     <li><a href="#">Something else here</a></li>
+                     <li role="separator" class="divider"></li>
+                     <li><a href="#">Separated link</a></li>
+                  </ul>
+               </li>
+               <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Prospective Students <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                     <li><a href="#">Action</a></li>
+                     <li><a href="#">Another action</a></li>
+                     <li><a href="#">Something else here</a></li>
+                     <li role="separator" class="divider"></li>
+                     <li><a href="#">Separated link</a></li>
+                  </ul>
+               </li>
+               <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                     <li><a href="#">Action</a></li>
+                     <li><a href="#">Another action</a></li>
+                     <li><a href="#">Something else here</a></li>
+                     <li role="separator" class="divider"></li>
+                     <li><a href="#">Separated link</a></li>
+                  </ul>
+               </li>
+               <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends</a>
+                  <ul class="dropdown-menu">
+                     <li><a href="#">Action</a></li>
+                     <li><a href="#">Another action</a></li>
+                     <li><a href="#">Something else here</a></li>
+                     <li role="separator" class="divider"></li>
+                     <li><a href="#">Separated link</a></li>
+                  </ul>
+               </li>
+               <li>
+                  <a href="#"  role="button">Athletics </a>
+               </li>
+               <button type="button" class="btn rowdyblue" data-toggle="modal" data-target="#myModal">
+               Search
+               </button>
+            </ul>
+         </div>
+         <!-- /.navbar-collapse -->
+      </nav>
+   </div>
 </header>
-
-
-
 <!-- Button trigger modal -->
-
-
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+   <div class="modal-dialog" role="document">
+      <div class="modal-content">
+         <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+         </div>
+         <div class="modal-body">
+            <form>
+               <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Search">
+               </div>
+               <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+         </div>
+         <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+         </div>
       </div>
-      <div class="modal-body">
-    <form>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
+   </div>
 </div>
