--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -802,16 +802,20 @@ body{
     font-size: 1.2em;
   }
   button.btn.btn-default.visit-give-mobile {
-      right: 8.9em;
+      right: 22%;
       padding: 0.3em 0.1em !important;
   }
   button.btn.btn-default.give-mobile {
-      right: 0em;
+      right: 12.8%;
       padding: 0.3em 0.1em !important;
   }
   button.btn.btn-default.apply-mobile {
-      right: -8.95em;
+      right: 3.56%;
       padding: 0.3em 0.1em !important;
+  }
+
+  button.apply-mobile, button.visit-give-mobile {
+    position: absolute !important;
   }
 }
 
@@ -863,15 +867,14 @@ body{
     width: 12em;
   }
   button.btn.btn-default.visit-give-mobile {
-      right: 19.65%;
+      right: 23.77%;
   }
   button.btn.btn-default.give-mobile {
-      right: 1%;
+      right: 14.6%;
   }
   button.btn.btn-default.apply-mobile {
-      right: -17.76%;
+      right: 5.4%;
   }
-
 
 //  .pushdown-menu {
 //      height: 29em;
