--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -518,10 +518,22 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
   }
 }
 
+.hide-pipe {
+  display: none;
+}
 
+#nav-search {
+  position: absolute;
+  top: -3.5em;
+  right: 2em;
+}
+#nav-search a {
+  color: #fff;
+}
 
-
-
+.navbar {
+  min-height: 0;
+}
 
 @media (max-width: $screen-sm-max) {
   #nav-admissions {
@@ -731,9 +743,9 @@ body{
   .pushdown-menu {
       height: 29em;
   }
-  .fac-staf-stu-mobile {
-    display: none;
-  }
+  // .fac-staf-stu-mobile {
+  //   display: none;
+  // }
 //  #content-nav {
 //    letter-spacing: 0px;
 //    font-weight: 500;
@@ -814,8 +826,58 @@ body{
       padding: 0.3em 0.1em !important;
   }
 
-  button.apply-mobile, button.visit-give-mobile {
+  button.apply-mobile, button.visit-give-mobile, .fac-staf-stu-mobile {
     position: absolute !important;
+  }
+  .fac-staf-stu-mobile li, .fac-staf-stu-mobile li.hide-pipe {
+    display: inline;
+  }
+  ul.fac-staf-stu-mobile {
+    right: 5%;
+    top: -2em;
+  }
+  ul.fac-staf-stu-mobile li a, .fac-staf-stu-mobile li.hide-pipe {
+    font-family: 'Gotham A', 'Gotham B', sans-serif;
+    font-style: normal !important;
+    font-weight: 400 !important;
+    letter-spacing: 0px !important;
+    color: #fff !important;
+    font-size: 16px !important;
+    line-height: 1.5 !important;
+  }
+  a.dropdown-toggle, ul.nav.navbar-nav li a {
+    color: #003a6e;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.5em;
+    letter-spacing: 1px;
+  }
+  .dropdown-menu > li > a {
+    font-size: 0.8em !important;
+  }
+  .navbar-nav > li > a {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  li.dropdown {
+    margin-bottom: 0;
+    margin-right: 0;
+  }
+  div#bs-example-navbar-collapse-1.collapse.navbar-collapse {
+    transition: max-height 500ms cubic-bezier(0.42, 0, 0.58, 1);
+    box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
+  }
+  #nav-search {
+    position: relative;
+    top: inherit;
+    right: inherit;
+  }
+  #nav-search a {
+    background: #005fae;
+    position: relative;
+  }
+  .fa-search {
+    color: #fff;
   }
 }
 
@@ -823,7 +885,7 @@ body{
   .header-container, .container-fluid {
         padding-left: percentage(1/$grid-columns) ;
         padding-right: percentage(1/$grid-columns) ;
-    }
+  }
   #content-nav {
       font-weight: 600;
       font-size: 18px;
