--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -23,17 +23,17 @@
       <nav class="navbar nav-header">
          <!-- Brand and toggle get grouped for better mobile display -->
          <!-- Collect the nav links, forms, and other content for toggling -->
-         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+         <div class="" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-               <a href="/visit"><button type="button" class="btn btn-default visit-give-mobile">Visit</button></a>
-               <a href="/giving"><button type="button" class="btn btn-default visit-give-mobile give-mobile">Give</button></a>
-               <a href="/admissions"><button type="button" class="btn btn-default apply-mobile">Apply</button></a>
-               <ul class="fac-staf-stu-mobile">
+               <a href="/visit"><button type="button" class="btn btn-default visit-give-mobile collapse navbar-collapse">Visit</button></a>
+               <a href="/giving"><button type="button" class="btn btn-default visit-give-mobile give-mobile collapse navbar-collapse">Give</button></a>
+               <a href="/admissions"><button type="button" class="btn btn-default apply-mobile collapse navbar-collapse">Apply</button></a>
+               <ul class="fac-staf-stu-mobile collapse navbar-collapse">
                   <li><a href="/studenthub">Current Students</a></li>
                   <li class="hide-pipe">|</li>
                   <li><a href="/facstaff">Faculty &amp; Staff</a></li>
                </ul>
-               <li class="dropdown">
+               <li class="dropdown collapse navbar-collapse">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                      <li><a href="#">Action</a></li>
@@ -43,7 +43,7 @@
                      <li><a href="#">Separated link</a></li>
                   </ul>
                </li>
-               <li class="dropdown">
+               <li class="dropdown collapse navbar-collapse">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Prospective Students <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                      <li><a href="#">Action</a></li>
@@ -53,7 +53,7 @@
                      <li><a href="#">Separated link</a></li>
                   </ul>
                </li>
-               <li class="dropdown">
+               <li class="dropdown collapse navbar-collapse">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                      <li><a href="#">Action</a></li>
@@ -63,7 +63,7 @@
                      <li><a href="#">Separated link</a></li>
                   </ul>
                </li>
-               <li class="dropdown">
+               <li class="dropdown collapse navbar-collapse">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends</a>
                   <ul class="dropdown-menu">
                      <li><a href="#">Action</a></li>
@@ -73,7 +73,7 @@
                      <li><a href="#">Separated link</a></li>
                   </ul>
                </li>
-               <li>
+               <li class="collapse navbar-collapse">
                   <a href="#"  role="button">Athletics </a>
                </li>
                <li id="nav-search" type="button">
