--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -39,8 +39,8 @@
   ul li {
     font-family: $font-family-serif;
     color: #00447c;
-    padding-right: .25em;
-    padding-left: .25em;
+    // padding-right: .25em;
+    // padding-left: .25em;
     -webkit-transition: all 0.25s ease-in-out;
     -moz-transition: all 0.25s ease-in-out;
     -o-transition: all 0.25s ease-in-out;
@@ -524,8 +524,8 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
 
 #nav-search {
   position: absolute;
-  top: -3.5em;
-  right: 2em;
+  top: -3.6em;
+  right: 3.5em;
 }
 #nav-search a {
   color: #fff;
@@ -533,6 +533,19 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
 
 .navbar {
   min-height: 0;
+}
+
+.navbar-nav > li#nav-search > a {
+  padding: 10px 1em;
+}
+
+button.btn.btn-default.visit-give-mobile, button.btn.btn-default.give-mobile, button.btn.btn-default.apply-mobile {
+  text-align: center;
+}
+
+div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar-collapse-1 {
+  transition: max-height 500ms cubic-bezier(0.42, 0, 0.58, 1);
+  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
 }
 
 @media (max-width: $screen-sm-max) {
@@ -599,7 +612,13 @@ body{
   .navbar-nav {
       float: none!important;
       margin: 7px 0px;
+      overflow: scroll;
   }
+
+  #bs-example-navbar-collapse-1 {
+    overflow: scroll;
+  }
+
   .navbar-nav>li {
       float: none;
   }
@@ -862,10 +881,6 @@ body{
   li.dropdown {
     margin-bottom: 0;
     margin-right: 0;
-  }
-  div#bs-example-navbar-collapse-1.collapse.navbar-collapse {
-    transition: max-height 500ms cubic-bezier(0.42, 0, 0.58, 1);
-    box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
   }
   #nav-search {
     position: relative;
