fix position of desktop search icon and navbar items

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -720,6 +720,15 @@ body{
     display: none;
   }
 
+  #nav-search {
+  	top: 18px;
+  	margin-top: 11px;
+  }
+
+  ul.nav.navbar-nav li a {
+  	padding: 10px;
+  }
+
 //  li.dropdown {
 //    padding: 5px 0px;
 //    font-size: 1.08em;
