incorporate current navbar list items

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -34,47 +34,69 @@
                   <li><a href="/facstaff">Faculty &amp; Staff</a></li>
                </ul>
                <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About MSU Denver <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                     <li><a href="#">Action</a></li>
-                     <li><a href="#">Another action</a></li>
-                     <li><a href="#">Something else here</a></li>
-                     <li role="separator" class="divider"></li>
-                     <li><a href="#">Separated link</a></li>
+                    <li><a href="/about">About MSU Denver</a></li>
+                    <li><a href="/about/strategicplan2020">Strategic Plan 2020</a></li>
+                    <li><a href="/president">Office of the President</a></li>
+                    <li><a href="/trustees">Board of Trustees</a></li>
+                    <li><a href="/eoo">Office of Equal Opportunity</a></li>
+                    <li><a href="/our-past">Our Past</a></li>
+                    <li><a href="/contact">Questions / Comments</a></li>
+                    <li><a href="/commencement">Graduation / Commencement</a></li>
+                    <li><a href="/a-to-z/">A to Z</a></li>
                   </ul>
                </li>
                <li class="dropdown collapse navbar-collapse">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Prospective Students <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                     <li><a href="#">Action</a></li>
-                     <li><a href="#">Another action</a></li>
-                     <li><a href="#">Something else here</a></li>
-                     <li role="separator" class="divider"></li>
-                     <li><a href="#">Separated link</a></li>
+                    <li><a href="/admissions">Admissions</a></li>
+                    <li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li>
+                    <li><a href="/admissions/apply/transfer">Transfer Students</a></li>
+                    <li><a href="/admissions/apply/adultstudents">Adult Students</a></li>
+                    <li><a href="/admissions/apply/masters">Master&rsquo;s Programs</a></li>
+                    <li><a href="/admissions/apply/militaryveteran">Military Veterans</a></li>
+                    <li><a href="/admissions/apply/internationalstudents">International Students</a></li>
+                    <li><a href="/cost">Out-of-State</a></li>
+                    <li><a href="/admissions/apply/re-admit">Re-Admit</a></li>
+                    <li><a href="/admissions/apply/non-degree">Non-Degree</a></li>
+                    <li><a href="/admissions/apply/concurrentlyenrolled">Concurrently Enrolled</a></li>
+                    <li><a href="/cost">Cost</a></li>
                   </ul>
                </li>
                <li class="dropdown collapse navbar-collapse">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                     <li><a href="#">Action</a></li>
-                     <li><a href="#">Another action</a></li>
-                     <li><a href="#">Something else here</a></li>
-                     <li role="separator" class="divider"></li>
-                     <li><a href="#">Separated link</a></li>
+                    <li><a href="/academics/">Academics Overview</a></li>
+                    <li><a href="/programs/">Academic Programs</a></li>
+                    <li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li>
+                    <li><a href="/las/">College of Letters, Arts &amp; Sciences</a></li>
+                    <li><a href="/cps/">College of Professional Studies</a></li>
+                    <li><a href="/business/">College of Business</a></li>
+                    <li><a href="/education/">School of Education</a></li>
+                    <li><a href="/fys/">First Year Success</a></li>
+                    <li><a href="/campuslife/academicsupport">Academic Support</a></li>
+                    <li><a href="/online/">Online Courses</a></li>
+                    <li><a href="/extendedcampus">Extended Campus</a></li>
+                    <li><a href="/academics/specialprograms">Special Programs</a></li>
+                    <li><a href="/studentengagementandwellness">Student Engagement &amp; Wellness</a></li>
                   </ul>
                </li>
                <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends</a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                     <li><a href="#">Action</a></li>
-                     <li><a href="#">Another action</a></li>
-                     <li><a href="#">Something else here</a></li>
-                     <li role="separator" class="divider"></li>
-                     <li><a href="#">Separated link</a></li>
+                    <li><a href="/alumni/">Alumni &amp; Friends Home</a></li>
+                    <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
+                    <li><a href="/alumni/getinvolved/">Get Involved</a></li>
+                    <li><a href="/alumni/lifelonglearning/">Lifelong Learning</a></li>
+                    <li><a href="/alumni/events">Alumni Events</a></li>
+                    <li><a href="/alumni/alumniassociation/">Alumni Association</a></li>
+                    <li><a href="/alumni/alumnimagazine/">MSU Denver Magazine</a></li>
+                    <li><a href="/alumni/contactus/">Contact Alumni &amp; Friends</a></li>
                   </ul>
                </li>
                <li class="collapse navbar-collapse">
-                  <a href="#"  role="button">Athletics </a>
+                  <a href="http://roadrunnersathletics.com"  role="button">Athletics </a>
                </li>
                <li id="nav-search" type="button">
                  <a href="#" data-toggle="modal" data-target="#myModal">
