--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -207,6 +207,10 @@ h6 {
   margin: 1em
 }
 
+.thumbnail > img, .thumbnail a > img {
+  padding: 10px !important;
+}
+
 .modal-dialog {
   padding-top: 12%
 }
