--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -9720,6 +9720,21 @@ a:focus, a:hover {
   color: #888;
 }
 
+.content-inner a {
+  color: #007dc3;
+  font-weight: 700;
+}
+
+.content-inner a:hover {
+  border-bottom: 1px solid;
+  text-decoration: none;
+}
+
+.content-inner ul li {
+  position: relative;
+  left: 1em;
+}
+
 #layout, #menu, .menu-link {
   -webkit-transition: all .2s ease-out;
   -moz-transition: all .2s ease-out;
@@ -11207,6 +11222,10 @@ h6 {
   margin: 1em;
 }
 
+.thumbnail > img, .thumbnail a > img {
+  padding: 10px !important;
+}
+
 .modal-dialog {
   padding-top: 12%;
 }
@@ -11345,6 +11364,19 @@ a.t4Edit-page:hover {
   width: 100%;
 }
 
+.contact-info button {
+  float: left !important;
+}
+
+@media screen and (min-width: 768px) {
+  .contact-info-mobile {
+    display: none;
+  }
+
+  .contact-info button {
+    float: right !important;
+  }
+}
 /** print styles **/
 @media print {
   * {
