--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -9144,6 +9144,19 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
   width: 100%;
 }
 
+.contact-info button {
+  float: left !important;
+}
+
+@media screen and (min-width: 768px) {
+  .contact-info-mobile {
+    display: none;
+  }
+
+  .contact-info button {
+    float: right !important;
+  }
+}
 .custombtn {
   background: #e5e5e5;
   color: #00447c uppercase;
